Work on environment setup.