@@ -1,15 +1,21 @@
 import java.awt.GraphicsEnvironment;
 import java.io.File;
 import java.lang.reflect.Method;
+import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
 
+import org.reldb.relang.reli.JarUtilities;
+
 public class RelI {
 	public static void main(String args[]) {
+		if (JarUtilities.isRunningFromJAR())
+			System.out.println("Running from JAR: " + JarUtilities.getJarName());
 		if (GraphicsEnvironment.isHeadless())
 			addJarToClasspath(new File("lib/org.eclipse.rap.rwt_3.4.0.20171130-0837.jar"));
 		else {
-			File swtJar = new File(getArchFilename("lib/swt")); 
+			File swtJar = new File(getArchFilename("lib/swt"));
+			System.out.println("Loading SWT jar " + swtJar);
 			addJarToClasspath(swtJar);
 		}
 		addJarToClasspath(new File("lib/ecj-4.7.3a.jar"));
@@ -17,16 +23,25 @@ public class RelI {
 	}
 
 	public static void addJarToClasspath(File jarFile) {
-		try {
-			URL url = jarFile.toURI().toURL();
-			URLClassLoader urlClassLoader = (URLClassLoader) ClassLoader.getSystemClassLoader();
-			Class<?> urlClass = URLClassLoader.class;
-			Method method = urlClass.getDeclaredMethod("addURL", new Class<?>[] { URL.class });
-			method.setAccessible(true);
-			method.invoke(urlClassLoader, new Object[] { url });
-		} catch (Throwable t) {
-			System.out.println("ERROR: " + t + " in RelI::addJarToClasspath.");
-			t.printStackTrace();
+		if (JarUtilities.isRunningFromJAR()) {
+			try {
+				URLClassLoader child = new URLClassLoader (new URL[] {new URL("file://./my.jar")}, RelI.class.getClassLoader());
+			} catch (MalformedURLException e) {
+				System.out.println("ERROR: " + e + " in RelI::addJarToClasspath.");
+				e.printStackTrace();
+			}			
+		} else {
+			try {
+				URL url = jarFile.toURI().toURL();
+				URLClassLoader urlClassLoader = (URLClassLoader) ClassLoader.getSystemClassLoader();
+				Class<?> urlClass = URLClassLoader.class;
+				Method method = urlClass.getDeclaredMethod("addURL", new Class<?>[] { URL.class });
+				method.setAccessible(true);
+				method.invoke(urlClassLoader, new Object[] { url });
+			} catch (Throwable t) {
+				System.out.println("ERROR: " + t + " in RelI::addJarToClasspath.");
+				t.printStackTrace();
+			}
 		}
 	}
 
